--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="LP Sample">
-  <!-- reset.css ress -->
   <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css" />
   <link rel="stylesheet" href="style.css" />
   <title>LP Sample</title>
@@ -13,7 +12,7 @@
   <!-- Header -->
   <header id="header">
     <h1 class="site-title">
-      <a href="#"> ulala1210 </a>
+      <a href="#"> LP Sample </a>
     </h1>
     <nav>
       <ul>
@@ -23,7 +22,7 @@
         <li><a href="#contact">Contact</a></li>
         <li>
           <a href="https://x.com" target="_blank" rel="noopener noreferrer">
-            <img src="./img/twitter.png" alt="X (twitter)" class="icon">
+            <img src="./img/twitter.png" alt="X (twitter)" class="icon" />
           </a>
         </li>
       </ul>
@@ -31,6 +30,12 @@
   </header>
 
   <!-- Main -->
+  <div id="main">
+    <picture>
+      <source media="(max-width: 600px)" srcset="./img/main-sp.jpg" />
+      <img src="./img/main-pc.jpg" alt="" />
+    </picture>
+  </div>
 
   <!-- Footer -->
 </body>
