add: about content

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="description" content="LP Sample">
   <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css" />
   <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css?family=Sawarabi+Gothic" rel="stylesheet">
   <title>LP Sample</title>
 </head>
 <body>
@@ -36,6 +37,20 @@
       <img src="./img/main-pc.jpg" alt="" />
     </picture>
   </div>
+
+  <!-- about -->
+  <section id="about" class="wrapper">
+    <h2 class="sec-title">About</h2>
+    <ul>
+      <li>株式会社うらめし</li>
+      <li>Web制作会社</li>
+      <li>Webサイト・アプリ開発を承ります。</li>
+      <li>メールアドレス: ulala@xxxxx.com</li>
+    </ul>
+    <p>
+      Webサイト制作やアプリ開発を得意としています。法人向けの研修講師としても活動しており、新人教育をしたい企業様の申し込みも承ります。
+    </p>
+  </section>
 
   <!-- Footer -->
 </body>
