--- a/index.html
+++ b/index.html
@@ -52,6 +52,22 @@
     </p>
   </section>
 
+  <!-- works -->
+  <section id="works" class="wrapper">
+    <h2 class="sec-title">Works</h2>
+    <ul>
+      <li><img src="./img/works1.jpg" alt="works1" /></li>
+      <li><img src="./img/works2.jpg" alt="works2" /></li>
+      <li><img src="./img/works3.jpg" alt="works3" /></li>
+      <li><img src="./img/works4.jpg" alt="works4" /></li>
+      <li><img src="./img/works5.jpg" alt="works5" /></li>
+      <li><img src="./img/works6.jpg" alt="works6" /></li>
+      <li><img src="./img/works1.jpg" alt="works1" /></li>
+      <li><img src="./img/works2.jpg" alt="works2" /></li>
+      <li><img src="./img/works3.jpg" alt="works3" /></li>
+    </ul>
+  </section>
+
   <!-- Footer -->
 </body>
 </html>
